tests/negative/typecheck/ignore_error.orng
// ignore_error.orng:6:7: error: expected a value of type `()`, got a value of type `()!()`
//     f()
//      ^
// 
fn main() {
    f()
}

fn f() -> ()!() {
    .err
}